5.2-k8s/k8s/web-app-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-server-service
spec:
  selector:
    app: simple-web-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-web-server
  template:
    metadata:
      labels:
        app: simple-web-server
    spec:
      containers:
        - name: simple-web-server
          image: romanowalex/simple-web-server:v1.2
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8080
