5.2-k8s/k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: simple-web-server-service
      port:
        number: 8080
  rules:
    - host: k8s-test.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-web-server-service
                port:
                  number: 8080
